fix: bootstrap icons not showing

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,6 +2,7 @@
 @import "./variables";
 
 // Bootstrap + Icons
+$bootstrap-icons-font-src: url('~bootstrap-icons/font/fonts/bootstrap-icons.woff2') format("woff") !default;
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons";
 
